@@ -93,55 +93,11 @@ export const BlueStorageProvider = ({ children }) => {
   };
 
   const refreshAllWalletTransactions = async (lastSnappedTo, showUpdateStatusIndicator = true) => {
-    let noErr = true;
-    try {
-      if (showUpdateStatusIndicator) {
-        setWalletTransactionUpdateStatus(WalletTransactionsStatus.ALL);
-      }
-      const balanceStart = +new Date();
-      await fetchWalletBalances(lastSnappedTo);
-      const balanceEnd = +new Date();
-      console.log('fetch balance took', (balanceEnd - balanceStart) / 1000, 'sec');
-      const start = +new Date();
-      await fetchWalletTransactions(lastSnappedTo);
-      const end = +new Date();
-      console.log('fetch tx took', (end - start) / 1000, 'sec');
-    } catch (err) {
-      noErr = false;
-      console.warn(err);
-    } finally {
-      setWalletTransactionUpdateStatus(WalletTransactionsStatus.NONE);
-    }
-    if (noErr) await saveToDisk(); // caching
+    
   };
 
   const fetchAndSaveWalletTransactions = async walletID => {
-    const index = wallets.findIndex(wallet => wallet.getID() === walletID);
-    let noErr = true;
-    try {
-      // 5sec debounce:
-      setWalletTransactionUpdateStatus(walletID);
-      if (+new Date() - _lastTimeTriedToRefetchWallet[walletID] < 5000) {
-        console.log('re-fetch wallet happens too fast; NOP');
-        return;
-      }
-      _lastTimeTriedToRefetchWallet[walletID] = +new Date();
-
-      const balanceStart = +new Date();
-      await fetchWalletBalances(index);
-      const balanceEnd = +new Date();
-      console.log('fetch balance took', (balanceEnd - balanceStart) / 1000, 'sec');
-      const start = +new Date();
-      await fetchWalletTransactions(index);
-      const end = +new Date();
-      console.log('fetch tx took', (end - start) / 1000, 'sec');
-    } catch (err) {
-      noErr = false;
-      console.warn(err);
-    } finally {
-      setWalletTransactionUpdateStatus(WalletTransactionsStatus.NONE);
-    }
-    if (noErr) await saveToDisk(); // caching
+    
   };
 
   const addWallet = wallet => {
