@@ -297,7 +297,7 @@ export class AppStorage {
    * @returns {Promise.<boolean>}
    */
   async loadFromDisk(password) {
-    this.resetData();
+    //this.resetData();
     let data = await this.getItem('data');
   
     if (data !== null) {
