@@ -1,1 +1,1 @@
-"* Add init fastlane \n* Clean code \n* add config react-native-vector-icons for android \n* Add app for android \n"
+"* Add cache \n* Updaet soon \n* Update qr \n* Update about \n* Add settings \n* Cleanup \n* Remove code \n* Cleanup \n* Add init fastlane \n* Clean code \n* add config react-native-vector-icons for android \n* Add app for android \n"
